# shawty

./: .env.example  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs  url_handler.rs
src/routes/: homepage.rs  mod.rs  redirect.rs  shorten.rs
templates/: error.html  index.html
templates/shorten/: success.html
