[package]
name = "shawty"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.10.0"
dashmap = "6.1.0"
tracing = "0.1.44"
tracing-subscriber = "0.3"
dotenvy = "0.15.7"
url = "2.5.8"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
axum = "0.8.8"
